@@ -228,7 +228,6 @@ use EPrints::Search::Field;
 use EPrints::Search::Condition;
 use EPrints::CLIProcessor;
 use EPrints::ScreenProcessor;
-use EPrints::Session;
 use EPrints::Script;
 use EPrints::URL;
 use EPrints::Paracite;
