@@ -394,10 +394,14 @@ sub load_workflows
 	$self->{workflows_loaded} = 1;
 }
 
+######################################################################
+
 package EPrints::Index;
 
 sub split_words { &EPrints::Index::Tokenizer::split_words }
 sub apply_mapping { &EPrints::Index::Tokenizer::apply_mapping }
+
+######################################################################
 
 package EPrints::Session;
 
@@ -426,4 +430,7 @@ sub EPrints::Session::new
 	}
 }
 
+$INC{"EPrints/Subject.pm"} = "EPrints/BackCompatibility.pm";
+
+######################################################################
 1;
